A span tag is added to HTML document

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>Congratulations!</h1>
     <p>You successfully cloned a Git repository from the server to your computer&rsquo;s hard drive. Now, let&rsquo;s celebrate for a few seconds by looking at cute animals.</p>
     <p>This line has been added to the HTML document.</p>
+    <span>Span <tag> is an inline element.</span>
+
   </div>
 
   <div class="photo">
